@@ -1,23 +1,25 @@
 package com.personal.happygallery.application.booking;
 
 import com.personal.happygallery.application.booking.port.in.GuestBookingUseCase;
-import com.personal.happygallery.application.booking.port.out.BookingReaderPort;
 import com.personal.happygallery.application.customer.VerifiedGuestResolver;
-import com.personal.happygallery.application.customer.port.out.PhoneVerificationStorePort;
-import com.personal.happygallery.domain.error.DuplicateBookingException;
+import com.personal.happygallery.application.customer.port.out.PhoneVerificationSender;
 import com.personal.happygallery.application.token.GuestTokenService;
 import com.personal.happygallery.domain.booking.Booking;
-import com.personal.happygallery.domain.booking.DepositCalculator;
 import com.personal.happygallery.domain.booking.DepositPaymentMethod;
 import com.personal.happygallery.domain.booking.Guest;
 import com.personal.happygallery.domain.booking.PhoneVerification;
+import com.personal.happygallery.domain.booking.PhoneVerificationPurpose;
 import com.personal.happygallery.domain.booking.Slot;
+import com.personal.happygallery.domain.error.ErrorCode;
+import com.personal.happygallery.domain.error.HappyGalleryException;
+import com.personal.happygallery.domain.payment.PaymentContext;
 import java.security.SecureRandom;
 import java.time.Clock;
 import java.time.LocalDateTime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
@@ -30,73 +32,88 @@ public class DefaultGuestBookingService implements GuestBookingUseCase {
     private static final int VERIFICATION_EXPIRE_MINUTES = 5;
 
     private final VerifiedGuestResolver verifiedGuestResolver;
-    private final PhoneVerificationStorePort phoneVerificationStorePort;
-    private final BookingReaderPort bookingReaderPort;
-    private final BookingSlotSupport creationSupport;
+    private final PhoneVerificationIssueTransactionService phoneVerificationIssueTransaction;
+    private final PhoneVerificationSender phoneVerificationSender;
+    private final BookingCreationSupport creationSupport;
     private final GuestTokenService guestTokenService;
     private final Clock clock;
     private final SecureRandom random = new SecureRandom();
 
     public DefaultGuestBookingService(VerifiedGuestResolver verifiedGuestResolver,
-                               PhoneVerificationStorePort phoneVerificationStorePort,
-                               BookingReaderPort bookingReaderPort,
-                               BookingSlotSupport creationSupport,
-                               GuestTokenService guestTokenService,
-                               Clock clock) {
+                                      PhoneVerificationIssueTransactionService phoneVerificationIssueTransaction,
+                                      PhoneVerificationSender phoneVerificationSender,
+                                      BookingCreationSupport creationSupport,
+                                      GuestTokenService guestTokenService,
+                                      Clock clock) {
         this.verifiedGuestResolver = verifiedGuestResolver;
-        this.phoneVerificationStorePort = phoneVerificationStorePort;
-        this.bookingReaderPort = bookingReaderPort;
+        this.phoneVerificationIssueTransaction = phoneVerificationIssueTransaction;
+        this.phoneVerificationSender = phoneVerificationSender;
         this.creationSupport = creationSupport;
         this.guestTokenService = guestTokenService;
         this.clock = clock;
     }
 
-    /**
-     * 휴대폰 인증 코드를 생성·저장한다.
-     * 실제 SMS 발송은 미구현 — 코드는 서버 로그에서만 확인 가능.
-     *
-     * @return 저장된 PhoneVerification (id, phone — code는 응답에 포함하지 않음)
-     */
-    public PhoneVerification sendVerificationCode(String phone) {
-        String code = String.format("%06d", random.nextInt(1_000_000));
+    /** 휴대폰 인증 코드를 생성·저장하고 전용 SMS 경계로 발송한다. */
+    @Override
+    @Transactional(propagation = Propagation.NOT_SUPPORTED)
+    public PhoneVerification sendVerificationCode(String phone, PhoneVerificationPurpose purpose) {
+        String code = "%06d".formatted(random.nextInt(1_000_000));
         LocalDateTime expiresAt = LocalDateTime.now(clock)
                 .plusMinutes(VERIFICATION_EXPIRE_MINUTES);
-        PhoneVerification pv = new PhoneVerification(phone, code, expiresAt);
-        pv = phoneVerificationStorePort.save(pv);
-        log.info("[phone-verification] phone={}, verificationId={}, code={}", phone, pv.getId(), code);
+        PhoneVerification pv = new PhoneVerification(phone, code, purpose, expiresAt);
+        pv = phoneVerificationIssueTransaction.save(pv);
+        if (!phoneVerificationSender.send(pv.getPhone(), code)) {
+            throw new HappyGalleryException(
+                    ErrorCode.SERVICE_UNAVAILABLE,
+                    "인증 코드를 발송하지 못했습니다. 잠시 후 다시 시도해주세요.");
+        }
+        pv = phoneVerificationIssueTransaction.completeDelivery(pv.getId(), pv.getPhone(), purpose);
+        log.info("[phone-verification] created [verificationId={}]", pv.getId());
         return pv;
     }
 
     /** 게스트 예약을 생성한다. 비회원은 예약금 결제만 허용한다. */
+    @Override
     public GuestBookingResult createGuestBooking(CreateGuestBookingCommand command) {
-        // 1. 인증 코드 검증 + Guest upsert
-        Guest guest = verifiedGuestResolver.resolveVerifiedGuest(
+        Guest guest = verifiedGuestResolver.resolveWithVerificationCode(
                 command.phone(), command.code(), command.name());
+        return createBooking(
+                guest, command.slotId(), command.paymentMethod(),
+                command.depositAmount(), command.balanceAmount(), 1);
+    }
 
-        // 2. 슬롯 활성 여부 확인 (락 전 빠른 체크)
-        Slot slot = creationSupport.loadActiveSlot(command.slotId());
+    @Override
+    public GuestBookingResult createPaymentGuestBooking(CreatePaymentGuestBookingCommand command) {
+        Guest guest = verifiedGuestResolver.resolveWithPaymentProof(
+                PaymentContext.BOOKING,
+                command.paymentOrderId(), command.phone(), command.verificationProof(), command.name());
+        return createBooking(
+                guest, command.slotId(), command.paymentMethod(),
+                command.depositAmount(), command.balanceAmount(), command.participantCount());
+    }
 
-        // 3. 중복 예약 확인
-        if (bookingReaderPort.existsBySlotIdAndGuestId(command.slotId(), guest.getId())) {
-            throw new DuplicateBookingException();
-        }
-
-        // 4. 비관적 락 + 정원 증가 + 버퍼 비활성화
-        creationSupport.lockSlotCapacity(command.slotId());
+    private GuestBookingResult createBooking(
+            Guest guest,
+            Long slotId,
+            DepositPaymentMethod paymentMethod,
+            long depositAmount,
+            long balanceAmount,
+            int participantCount) {
+        Slot slot = creationSupport.reserveSlot(
+                guest.getPhoneHmac(), slotId, participantCount);
 
         GuestTokenService.IssuedToken issued = guestTokenService.issue();
         String rawToken = issued.rawToken();
         String accessToken = issued.tokenHash();
 
-        creationSupport.requireValidDeposit(command.paymentMethod());
-        long depositAmount = DepositCalculator.of(slot);
-        long balanceAmount = slot.getBookingClass().getPrice() - depositAmount;
+        creationSupport.requireValidDeposit(paymentMethod);
         Booking booking = Booking.forGuestDeposit(
                 guest,
                 slot,
+                participantCount,
                 depositAmount,
                 balanceAmount,
-                command.paymentMethod(),
+                paymentMethod,
                 accessToken);
 
         booking = creationSupport.saveAndComplete(booking, slot);
